unpackaged/main/default/objects/Opportunity/fields/CPS_Does_Region_Owner_Have_Email__c.field-meta.xml
<CustomField>
    <fullName>CPS_Does_Region_Owner_Have_Email__c</fullName>
    <description>Highlights whether or not the Contact that is associated to the Opportunity Record as 'Region Owner' has an email address value present. (PIU-239)</description>
    <formula>NOT(ISBLANK( Region_Owner__r.Email ))</formula>
    <label>Does Region Owner Have Email?</label>
    <type>Checkbox</type>
</CustomField>