unpackaged/main/default/objects/Opportunity/fields/CTC_Expected_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CTC_Expected_Project_End_Date__c</fullName>
    <label>Expected Project End Date</label>
    <type>Date</type>
</CustomField>