unpackaged/main/default/objects/Opportunity/fields/Region_Owner__c.field-meta.xml
<CustomField>
    <fullName>Region_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Region Owner field used for Services Opportunity Email Notification Flow</description>
    <label>Region Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Region Owner)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>